test/sema/negative/cps_call.impala
fn main() -> int {
    fn f(a: int, b: int, c: int) {
        f(1, 2)
    }
    42
}
