test/sema/negative/cps_call.output
cps_call.impala:3 col 9 - 15: error: cannot use function as returning function
